<resources>
    <string name="app_name">PlutomenTask</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="update_account">Update account</string>
    <string name="user_list">User list</string>
    <string name="update">Update</string>
    <string name="send_push">Send Push</string>
</resources>