<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.MainActivity"
    android:layout_margin="@dimen/margin16"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profileImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_profile"
            app:civ_border_width="2dp"
            android:layout_gravity="center"
            app:civ_border_color="#50000000"
            android:layout_marginTop="@dimen/margin16"
            />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            android:padding="@dimen/margin8"
            />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            android:padding="@dimen/margin8"
            />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            android:padding="@dimen/margin8"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/logout"
            android:layout_gravity="center_horizontal"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_ac_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/delete_account"
            android:layout_gravity="center_horizontal"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_ac_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/update_account"
            android:layout_gravity="center_horizontal"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/userlist_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/user_list"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

</LinearLayout>