<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8"
            android:text="@string/first_name"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"
            android:maxLength="20"
            android:padding="@dimen/margin8"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/sendNotification"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:text="@string/send_push"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>


    <TextView
        android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin8"
        android:text="@string/email_id"
        android:textSize="@dimen/sp18"
        android:maxLength="20"
        android:padding="@dimen/margin8"
        />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin1"
        />

</LinearLayout>