<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

<!--
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:titleTextColor="@color/white"
            android:layout_alignParentTop="true">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
-->

    <ImageView
        android:layout_width="@dimen/margin154"
        android:layout_height="@dimen/margin154"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin16"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailIdTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:layout_marginTop="@dimen/margin16"
        android:layout_marginStart="@dimen/margin32"
        android:layout_marginEnd="@dimen/margin32"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            android:maxLength="30"
            android:text="sam@gmail.com"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/margin16"
        android:layout_marginStart="@dimen/margin32"
        android:layout_marginEnd="@dimen/margin32"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="10"
            android:text="11111111"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>